[gd_scene load_steps=7 format=2]

[ext_resource path="res://OpenWorld/Player/Menu/Menus/OptionsScreen/OptionsScreen.gd" type="Script" id=1]
[ext_resource path="res://pkmnfl.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_color = Color( 0.807843, 0.231373, 0.231373, 1 )
font_data = ExtResource( 2 )

[node name="OptionsScreen" type="Node2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 1 )

[node name="Connect" type="Panel" parent="."]
margin_left = -753.0
margin_top = -481.0
margin_right = 909.0
margin_bottom = 487.0

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 255.667
margin_top = 166.333
margin_right = 326.667
margin_bottom = 188.333
rect_scale = Vector2( 7, 7 )
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 255.667
margin_top = 235.333
margin_right = 398.667
margin_bottom = 251.333
rect_scale = Vector2( 7, 7 )
custom_fonts/font = SubResource( 2 )

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 255.667
margin_top = 449.333
margin_right = 315.667
margin_bottom = 468.333
rect_scale = Vector2( 7, 7 )
custom_fonts/font = SubResource( 1 )
text = "IP"

[node name="IP" type="LineEdit" parent="Connect"]
margin_left = 255.667
margin_top = 525.333
margin_right = 398.667
margin_bottom = 541.333
rect_scale = Vector2( 7, 7 )
custom_fonts/font = SubResource( 2 )

[node name="Host" type="Button" parent="Connect"]
margin_left = 779.667
margin_top = 364.333
margin_right = 851.667
margin_bottom = 377.333
rect_scale = Vector2( 6.5, 6.5 )
custom_fonts/font = SubResource( 3 )
text = "Host Game"

[node name="Join" type="Button" parent="Connect"]
margin_left = 779.667
margin_top = 665.333
margin_right = 851.667
margin_bottom = 678.333
rect_scale = Vector2( 6.5, 6.5 )
custom_fonts/font = SubResource( 3 )
text = "Join Game"

[node name="ErrorSpace" type="Label" parent="Connect"]
margin_left = 257.0
margin_top = 795.667
margin_right = 400.0
margin_bottom = 811.667
rect_scale = Vector2( 7, 7 )
custom_colors/font_color = Color( 0.729412, 0.356863, 0.356863, 1 )
custom_fonts/font = SubResource( 4 )

[connection signal="pressed" from="Connect/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
